# binance-client

./: Cargo.toml
src/: error.rs  lib.rs
src/spot/stream/: mod.rs  request.rs  response.rs
src/usdm_futures/: mod.rs
src/usdm_futures/api/: mod.rs
src/usdm_futures/api/extend/: mod.rs
src/usdm_futures/stream/: mod.rs  request.rs  response.rs
src/usdm_futures/types/: mod.rs  request.rs  response.rs
