[package]
name = "binance-client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
futures-channel = "0.3.31"
futures-util = "0.3.31"
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.13.1", default-features = false, features = ["query", "json", "stream", "socks"] }
hmac = "0.12.1"
sha2 = "0.10.9"
rust_decimal = { version = "1.40.0", features = [ "serde-with-str"] }
ulid = "1.2.1"
fluent-uri = "0.4.1"
tokio = "1.49.0"
tokio-util = { version = "0.7.18", features = [ "compat"] }
tokio-tungstenite = { version = "0.28.0", features = [ "native-tls-vendored"] }
socks5-client = { git = "https://github.com/vincascm/socks5.git" }

